~fix: overflow issue in booking calender card

--- a/src/assets/styles/scss/components/_left-menu.scss
+++ b/src/assets/styles/scss/components/_left-menu.scss
@@ -4,7 +4,7 @@
 
 
 .left-menu {
-  max-width: 296px;
+  max-width: 230px;
   width: 100%;
   height: 100vh;
   background: vars.$color-white;
